--- a/hermes-client/src/main/resources/views/registeration/RegisterationView.fxml
+++ b/hermes-client/src/main/resources/views/registeration/RegisterationView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
@@ -18,7 +19,7 @@
       <Pane id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="832.0" style="-fx-background-color: #2B233C;">
 
          <children>
-            <Pane id="secondPane" layoutY="74.0" prefHeight="505.0" prefWidth="841.0" style="-fx-background-color: #2B233C; -fx-background-radius: 100;">
+            <Pane id="secondPane" fx:id="countryTextField" layoutY="74.0" prefHeight="505.0" prefWidth="841.0" style="-fx-background-color: #2B233C; -fx-background-radius: 100;">
                <children>
 
                   <Pane layoutX="49.0" layoutY="77.0" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: white; -fx-background-radius: 100;">
@@ -50,7 +51,7 @@
                               <Image url="@../../images/icons8-password-48.png" />
                            </image>
                         </ImageView>
-                        <PasswordField id="passwordTextField" fx:id="emailTextField" layoutX="44.0" layoutY="4.0" prefHeight="37.0" prefWidth="172.0" promptText="Password" style="-fx-background-color: white;" />
+                        <PasswordField fx:id="passwordTextField" layoutX="44.0" layoutY="4.0" prefHeight="37.0" prefWidth="172.0" promptText="Password" style="-fx-background-color: white;" />
                         <ImageView fx:id="eyeImage" fitHeight="29.0" fitWidth="22.0" layoutX="221.0" layoutY="11.0" onMouseClicked="#eyeImageMouseClicked" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../images/icons8-closed-eye-48.png" />
@@ -101,7 +102,7 @@
                               <Image url="@../../images/australia.png" />
                            </image>
                         </ImageView>
-                        <TextField id="nameTextField" fx:id="countryTextField" layoutX="44.0" layoutY="4.0" prefHeight="37.0" prefWidth="201.0" promptText="Country" style="-fx-background-color: white;" />
+                        <ComboBox fx:id="countryComboBox" layoutX="55.0" layoutY="10.0" prefHeight="25.0" prefWidth="182.0" style="-fx-background-color: white;" />
                      </children>
                   </Pane>
                   <RadioButton fx:id="maleRadioButton" layoutX="525.0" layoutY="277.0" mnemonicParsing="false" prefWidth="65.0" style="-fx-cursor: hand;" text="Male" textFill="WHITE" />
