--- a/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
+++ b/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
@@ -52,7 +52,7 @@
                <children>
                   <HBox prefHeight="20.0" prefWidth="154.0">
                      <children>
-                        <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="searchImageView" onMouseClicked="#onSearchContactList" fitHeight="15.0" fitWidth="15.0" pickOnBounds="true"  preserveRatio="true">
                            <image>
                               <Image url="@../../images/icons8-iOS%20Glyph-Search.png" />
                            </image>
@@ -60,7 +60,7 @@
                               <Insets left="4.0" right="2.0" top="3.0" />
                            </HBox.margin>
                         </ImageView>
-                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" styleClass="transparent-background">
+                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" styleClass="transparent-background " style="-fx-text-fill: #FFFFFF;"  >
                            <padding>
                               <Insets left="10.0" />
                            </padding>
@@ -82,6 +82,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Pane>
+                  <!--
                   <HBox alignment="CENTER" prefHeight="50.0" prefWidth="184.0">
                      <children>
                         <ImageView fx:id="profileImage" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
@@ -170,6 +171,9 @@
                      </opaqueInsets>
                   </HBox>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="211.0" prefHeight="50.0" prefWidth="184.0">
+
+
+
                      <children>
                         <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -253,6 +257,8 @@
                         <Insets />
                      </opaqueInsets>
                   </HBox>
+                  -->
+
                </children>
             </VBox>
          </children>
