--- a/hermes-client/src/main/resources/views/login/LoginView.fxml
+++ b/hermes-client/src/main/resources/views/login/LoginView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,39 +16,14 @@
          <children>
             <Pane id="secondPane" layoutX="17.0" layoutY="15.0" prefHeight="406.0" prefWidth="330.0" style="-fx-background-color: #2B233C; -fx-background-radius: 100;">
                <children>
-                  <Pane layoutX="49.0" layoutY="77.0" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: white; -fx-background-radius: 100;">
+                  <Pane layoutX="36.0" layoutY="170.0" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: white; -fx-background-radius: 100;">
                      <children>
-                        <ImageView fitHeight="37.0" fitWidth="51.0" layoutX="34.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="25.0" fitWidth="29.0" layoutX="32.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../images/icons8-user-48.png" />
+                              <Image url="@../../images/icons8-Color-Call.png" />
                            </image>
                         </ImageView>
-                        <TextField id="nameTextField" layoutX="71.0" layoutY="4.0" prefHeight="37.0" prefWidth="172.0" promptText="Name" style="-fx-background-color: white;" />
-                     </children>
-                  </Pane>
-                  <Pane layoutX="49.0" layoutY="136.0" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: white; -fx-background-radius: 100;">
-                     <children>
-                        <ImageView fitHeight="37.0" fitWidth="51.0" layoutX="34.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../images/icons8-mail-48.png" />
-                           </image>
-                        </ImageView>
-                        <TextField id="emailTextField" layoutX="71.0" layoutY="4.0" prefHeight="37.0" prefWidth="172.0" promptText="E-mail" style="-fx-background-color: white;" />
-                     </children>
-                  </Pane>
-                  <Pane layoutX="49.0" layoutY="198.0" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: white; -fx-background-radius: 100;">
-                     <children>
-                        <ImageView fitHeight="37.0" fitWidth="37.0" layoutX="34.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../images/icons8-password-48.png" />
-                           </image>
-                        </ImageView>
-                        <PasswordField id="passwordTextField" layoutX="71.0" layoutY="3.0" prefHeight="37.0" prefWidth="172.0" promptText="Password" style="-fx-background-color: white;" />
-                        <ImageView id="eyeImage" fitHeight="37.0" fitWidth="29.0" layoutX="216.0" layoutY="8.0" onMouseClicked="#eyeImageMouseClicked" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../images/icons8-closed-eye-48.png" />
-                           </image>
-                        </ImageView>
+                        <TextField id="nameTextField" fx:id="phoneTextField" layoutX="57.0" layoutY="3.0" prefHeight="37.0" prefWidth="195.0" promptText="Phone number" style="-fx-background-color: white;" />
                      </children>
                   </Pane>
                   <Label layoutX="76.0" layoutY="349.0" style="-fx-font-size: 12;" text="Don't have an account?" textFill="WHITE" />
@@ -58,7 +32,7 @@
                         <Font size="13.0" />
                      </font>
                   </Hyperlink>
-                  <Button id="signButton" fx:id="signInButton" layoutX="119.0" layoutY="281.0" mnemonicParsing="false" onAction="#signinButtonAction" onKeyPressed="#signinKeyPressed" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: white; -fx-background-radius: 100; -fx-font-weight: bold; -fx-background-size: 20px;" text="Sign in">
+                  <Button id="signButton" fx:id="nextButton" layoutX="105.0" layoutY="273.0" mnemonicParsing="false" onAction="#nextButtonAction" onKeyPressed="#nextKeyPressed" prefHeight="42.0" prefWidth="120.0" style="-fx-background-color: white; -fx-background-radius: 100; -fx-font-weight: bold; -fx-background-size: 20px;" text="Next">
                      <font>
                         <Font size="16.0" />
                      </font>
