--- a/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
+++ b/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
@@ -37,6 +37,16 @@
                         <Insets bottom="20.0" left="5.0" top="10.0" />
                      </VBox.margin>
                   </ImageView>
+
+                  <ImageView fx:id="addGroupView" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#onAddGroupClicked" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/add-group.png" />
+                     </image>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="5.0" top="10.0" />
+                     </VBox.margin>
+                  </ImageView>
+
                   <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1000.0" />
                   <ImageView fx:id="logoutImageView" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#onLogoutClicked" pickOnBounds="true" preserveRatio="true">
                      <image>
