--- a/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
+++ b/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.web.HTMLEditor?>
 
 <BorderPane fx:id="mainBorderPane" prefHeight="720.0" prefWidth="1024.0" styleClass="mainbackground-color" stylesheets="@HomePage.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.client.presentation.controllers.HomePageController">
    <left>
@@ -52,7 +53,7 @@
                <children>
                   <HBox prefHeight="20.0" prefWidth="154.0">
                      <children>
-                        <ImageView fx:id="searchImageView" onMouseClicked="#onSearchContactList" fitHeight="15.0" fitWidth="15.0" pickOnBounds="true"  preserveRatio="true">
+                        <ImageView fx:id="searchImageView" fitHeight="15.0" fitWidth="15.0" onMouseClicked="#onSearchContactList" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../images/icons8-iOS%20Glyph-Search.png" />
                            </image>
@@ -60,7 +61,7 @@
                               <Insets left="4.0" right="2.0" top="3.0" />
                            </HBox.margin>
                         </ImageView>
-                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" styleClass="transparent-background " style="-fx-text-fill: #FFFFFF;"  >
+                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" style="-fx-text-fill: #FFFFFF;" styleClass="transparent-background ">
                            <padding>
                               <Insets left="10.0" />
                            </padding>
@@ -313,7 +314,7 @@
                   <VBox fx:id="messagesVerticalBox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="2500.0" prefWidth="2500.0" styleClass="fourth-background" stylesheets="@HomePage.css" />
                </content>
             </ScrollPane>
-            <HBox prefHeight="39.0" prefWidth="521.0">
+            <HBox maxWidth="1.7976931348623157E308">
                <children>
                   <ImageView fitHeight="25.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -323,11 +324,7 @@
                         <Insets left="15.0" top="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <TextField fx:id="messageTextField" prefHeight="26.0" prefWidth="220.0" HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets left="10.0" right="10.0" top="5.0" />
-                     </HBox.margin>
-                  </TextField>
+                  <HTMLEditor fx:id="messagHtmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" maxWidth="1.7976931348623157E308" prefHeight="100.0" />
                   <Button fx:id="sendButton" mnemonicParsing="false" text="Send">
                      <HBox.margin>
                         <Insets right="5.0" top="5.0" />
