--- a/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
+++ b/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mainBorderPane" prefHeight="720.0" prefWidth="1024.0" styleClass="mainbackground-color" stylesheets="@HomePage.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.client.presentation.controllers.HomePageController">
+<BorderPane fx:id="mainBorderPane" prefHeight="720.0" prefWidth="1024.0" styleClass="mainbackground-color" stylesheets="@HomePage.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.client.presentation.controllers.HomePageController">
    <left>
       <HBox prefHeight="500.0" prefWidth="231.0" BorderPane.alignment="CENTER">
          <children>
@@ -52,7 +53,7 @@
                <children>
                   <HBox prefHeight="20.0" prefWidth="154.0">
                      <children>
-                        <ImageView fx:id="searchImageView" onMouseClicked="#onSearchContactList" fitHeight="15.0" fitWidth="15.0" pickOnBounds="true"  preserveRatio="true">
+                        <ImageView fx:id="searchImageView" fitHeight="15.0" fitWidth="15.0" onMouseClicked="#onSearchContactList" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../images/icons8-iOS%20Glyph-Search.png" />
                            </image>
@@ -60,7 +61,7 @@
                               <Insets left="4.0" right="2.0" top="3.0" />
                            </HBox.margin>
                         </ImageView>
-                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" styleClass="transparent-background " style="-fx-text-fill: #FFFFFF;"  >
+                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" style="-fx-text-fill: #FFFFFF;" styleClass="transparent-background ">
                            <padding>
                               <Insets left="10.0" />
                            </padding>
@@ -77,10 +78,13 @@
                         <String fx:value="radius" />
                      </styleClass>
                   </HBox>
-                  <Pane opacity="0.16" prefHeight="1.0" prefWidth="200.0" styleClass="background-color">
+                  <Pane fx:id="contactsListPane" opacity="0.16" prefHeight="0.0" prefWidth="195.0" styleClass="background-color">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
+                     <children>
+                        <ListView fx:id="contactsListView" prefHeight="682.0" prefWidth="196.0" />
+                     </children>
                   </Pane>
                   <!--
                   <HBox alignment="CENTER" prefHeight="50.0" prefWidth="184.0">
