--- a/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
+++ b/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
@@ -263,7 +263,7 @@
                         <Insets left="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <Label prefHeight="29.0" prefWidth="100.0" styleClass="testing-font" stylesheets="@HomePage.css" text="Hashem " textFill="WHITE">
+                  <Label fx:id="nameTextField" prefHeight="29.0" prefWidth="100.0" styleClass="testing-font" stylesheets="@HomePage.css" text="Hashem " textFill="WHITE">
                      <font>
                         <Font size="20.0" />
                      </font>
