--- a/hermes-client/src/main/resources/views/profile/ProfileView.fxml
+++ b/hermes-client/src/main/resources/views/profile/ProfileView.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane fx:controller="gov.iti.jets.client.presentation.controllers.ProfileController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" stylesheets="@ProfileStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" stylesheets="@ProfileStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.client.presentation.controllers.ProfileController">
 	<children>
 		<HBox alignment="CENTER" layoutY="230.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="240.0">
 			<children>
@@ -151,7 +151,7 @@
 				</GridPane>
 			</children>
 		</VBox>
-		<StackPane id="back-stackpane" onMouseClicked="#backToPreviousScene" layoutX="30.0" layoutY="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+		<StackPane id="back-stackpane" layoutX="30.0" layoutY="30.0" onMouseClicked="#backToPreviousScene" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
 			<children>
 				<ImageView fx:id="previousImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
 					<image>
