--- a/hermes-server/src/main/resources/views/statistics/StatisticsStyle.css
+++ b/hermes-server/src/main/resources/views/statistics/StatisticsStyle.css
@@ -19,11 +19,17 @@ Label{
     -fx-text-fill: white;
     -fx-font-size: 20px;
 }
+.chart-pie-label {
+    -fx-fill: #AAAAAA;
+}
+.chart {
+    -fx-padding: 20px;
+}
 .chart-legend {
     -fx-background-color: #363A54;
 }
 .chart-content {
-    -fx-padding: 30px;
+
     -fx-background-color: FFFFFF;
 }
 #back-stackpane:hover{
