--- a/hermes-server/src/main/resources/views/announcement/AnnouncementStyle.css
+++ b/hermes-server/src/main/resources/views/announcement/AnnouncementStyle.css
@@ -8,7 +8,19 @@ Button{
     -fx-background-color:white;
     -fx-border-color:white;
 }
+
+ToggleButton{
+    -fx-text-fill: black;
+    -fx-font-family: Arial,Helvetica,sans-serif;
+    -fx-font-size: 14px;
+    -fx-background-color:white;
+    -fx-border-color:white;
+}
 Button:hover {
+    -fx-background-color: #C2C7FF;
+    -fx-text-fill: white;
+}
+ToggleButton:hover {
     -fx-background-color: #C2C7FF;
     -fx-text-fill: white;
 }
