--- a/hermes-server/src/main/resources/views/announcement/AnnouncementView.fxml
+++ b/hermes-server/src/main/resources/views/announcement/AnnouncementView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.HTMLEditor?>
@@ -13,8 +14,9 @@
                 <Font size="29.0" />
             </font>
         </Label>
-        <Button fx:id="sendMessageButton" alignment="CENTER" layoutX="80.0" layoutY="663.0" mnemonicParsing="false" text="Send Boradcast" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="80.0" />
-        <Button fx:id="statisticsButton" layoutX="819.0" layoutY="663.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="125.0" text="Show Statistics" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="80.0" />
-      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="80.0" layoutY="87.0" prefHeight="531.0" prefWidth="864.0" />
+        <Button fx:id="sendMessageButton" alignment="CENTER" layoutX="80.0" layoutY="649.0" mnemonicParsing="false" text="Send Boradcast" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="80.0" />
+        <Button fx:id="statisticsButton" layoutX="820.0" layoutY="649.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="125.0" text="Show Statistics" AnchorPane.bottomAnchor="43.0" AnchorPane.rightAnchor="79.0" />
+      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="80.0" layoutY="87.0" prefHeight="531.0" prefWidth="864.0" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="87.0" />
+      <Button fx:id="serverActivationButton" layoutX="440.0" layoutY="649.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="144.0" text="Server Activated" />
     </children>
 </AnchorPane>
