--- a/hermes-server/src/main/resources/views/announcement/AnnouncementView.fxml
+++ b/hermes-server/src/main/resources/views/announcement/AnnouncementView.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.HTMLEditor?>
 
@@ -14,9 +14,13 @@
                 <Font size="29.0" />
             </font>
         </Label>
-        <Button fx:id="sendMessageButton" alignment="CENTER" layoutX="80.0" layoutY="649.0" mnemonicParsing="false" text="Send Boradcast" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="80.0" />
-        <Button fx:id="statisticsButton" layoutX="820.0" layoutY="649.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="125.0" text="Show Statistics" AnchorPane.bottomAnchor="43.0" AnchorPane.rightAnchor="79.0" />
-      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="80.0" layoutY="87.0" prefHeight="531.0" prefWidth="864.0" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="87.0" />
-      <Button fx:id="serverActivationButton" layoutX="440.0" layoutY="649.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="144.0" text="Server Activated" />
+      <HBox alignment="CENTER" layoutX="78.0" layoutY="644.0" prefHeight="69.0" prefWidth="870.0" spacing="150.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="78.0" AnchorPane.rightAnchor="76.0">
+         <children>
+              <Button fx:id="sendMessageButton" alignment="CENTER" mnemonicParsing="false" text="Send Boradcast" />
+            <Button fx:id="serverActivationButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="144.0" text="Server Activated" />
+              <Button fx:id="statisticsButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="125.0" text="Show Statistics" />
+         </children>
+      </HBox>
+      <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="80.0" layoutY="95.0" prefHeight="531.0" prefWidth="864.0" AnchorPane.bottomAnchor="94.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="95.0" />
     </children>
 </AnchorPane>
