--- a/hermes-client/src/main/resources/views/login/NextLoginView.fxml
+++ b/hermes-client/src/main/resources/views/login/NextLoginView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -29,6 +30,7 @@
                         <Font size="16.0" />
                      </font>
                   </Button>
+                  <CheckBox fx:id="remembermeCheckBox" layoutX="50.0" layoutY="230.0" mnemonicParsing="false" text="Remember me" textFill="WHITE" />
                </children>
             </Pane>
          </children>
